Fix vertically truncated text in badges

--- a/alv-portal-ui/src/app/shared/forms/input/typeahead/typeahead.component.scss
+++ b/alv-portal-ui/src/app/shared/forms/input/typeahead/typeahead.component.scss
@@ -20,20 +20,24 @@
       padding: 0 !important;
       border: 0;
     }
-    .typeahead-badge {
-      font-weight: 500;
-      margin: 2px 1px 0;
-      border-radius: 1px;
-      .typeahead-badge-label {
-        max-width: 120px;
-      }
-      .remove-button {
-        cursor: pointer;
-        padding: 0.1rem;
-        border: none;
-        background-color: transparent;
-        &:hover {
-          color: darken($color-white, 10%);
+    fieldset {
+      height: 21px;
+      .typeahead-badge {
+        font-weight: 500;
+        margin: 2px 1px 0;
+        border-radius: 1px;
+        .typeahead-badge-label {
+          max-width: 120px;
+          height: 13px;
+        }
+        .remove-button {
+          cursor: pointer;
+          padding: 0.1rem;
+          border: none;
+          background-color: transparent;
+          &:hover {
+            color: darken($color-white, 10%);
+          }
         }
       }
     }
@@ -51,10 +55,10 @@
 }
 
 .first-in-group-item {
-  padding-top: 1rem;
+  padding-top: 1.25rem;
   .first-in-group-border {
     border-top: 1px solid $color-grey;
-    margin: -1.25rem -1.5rem .5rem;
+    margin: -1.25rem -1.5rem 1rem;
   }
 }
 
